# text2sql

./: README.md  pyproject.toml
.github/workflows/: ci.yml
texttosql/: hooks.py
texttosql/public/js/: report.js
texttosql/text_to_sql/: .env  report.py
